--- a/app/src/main/res/layout/fragment_donate_3.xml
+++ b/app/src/main/res/layout/fragment_donate_3.xml
@@ -5,10 +5,205 @@
     android:layout_height="match_parent"
     tools:context=".FragmentDonate_3">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <?xml version="1.0" encoding="utf-8"?>
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".FragmentDonate_1">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="1000dp"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="-30dp"
+                android:backgroundTint="@color/mint1"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp">
+
+                <TextView
+                    android:id="@+id/donate_title"
+                    android:layout_width="140dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="45dp"
+                    android:text="기부하기"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"
+                    android:textSize="30dp"
+                    android:textStyle="bold"/>
+
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="220dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="100dp"
+                android:layout_centerHorizontal="true"
+                android:backgroundTint="@color/white"
+                app:cardCornerRadius="30dp"
+                app:cardElevation="10dp">
+                <Button
+                    android:id="@+id/btn_recommend"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/white"
+                    android:background="@drawable/background_rounding"
+                    android:text="추천기부 설정"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"/>
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="180dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/gray2"/>
+
+            <TextView
+                android:layout_width="95dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="200dp"
+                android:layout_marginLeft="35dp"
+                android:text="카테고리"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
+            <ImageButton
+                android:id="@+id/category_child1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="230dp"
+                android:background="@drawable/category_navi"/>
+            <TextView
+                android:id="@+id/category_child2"
+                android:layout_width="30dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="65dp"
+                android:layout_marginTop="300dp"
+                android:text="아동"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/gray5"/>
+            <ImageButton
+                android:id="@+id/category_parent1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="230dp"
+                android:background="@drawable/category_navi"/>
+            <TextView
+                android:id="@+id/category_parent2"
+                android:layout_width="45dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="185dp"
+                android:layout_marginTop="300dp"
+                android:text="한부모"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/gray5"/>
+            <ImageButton
+                android:id="@+id/category_senior1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="285dp"
+                android:layout_marginTop="230dp"
+                android:background="@drawable/category_navi"/>
+            <TextView
+                android:id="@+id/category_senior2"
+                android:layout_width="45dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="305dp"
+                android:layout_marginTop="300dp"
+                android:text="어르신"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/gray5"/>
+
+            <ImageButton
+                android:id="@+id/category_dog1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="330dp"
+                android:background="@drawable/category_navi"/>
+            <TextView
+                android:id="@+id/category_dog2"
+                android:layout_width="45dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="63dp"
+                android:layout_marginTop="400dp"
+                android:text="유기견"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/gray5"/>
+            <ImageButton
+                android:id="@+id/category_nature1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="330dp"
+                android:background="@drawable/category_navi"/>
+            <TextView
+                android:id="@+id/category_nature2"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="183dp"
+                android:layout_marginTop="400dp"
+                android:text="자연재해"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/gray5"/>
+            <ImageButton
+                android:id="@+id/category_dis1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="285dp"
+                android:layout_marginTop="330dp"
+                android:background="@drawable/category_navi"/>
+            <TextView
+                android:id="@+id/category_dis2"
+                android:layout_width="45dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="305dp"
+                android:layout_marginTop="400dp"
+                android:text="장애인"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/gray5"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="450dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/gray2"/>
+
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="470dp"
+                android:layout_marginLeft="35dp"
+                android:text="기관 >"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
+            <ListView
+                android:id="@+id/listview1"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginTop="510dp"
+                android:layout_marginLeft="35dp"/>
+        </RelativeLayout>
+    </FrameLayout>
 </FrameLayout>
