--- a/app/src/main/res/layout/fragment_donate_6.xml
+++ b/app/src/main/res/layout/fragment_donate_6.xml
@@ -47,16 +47,18 @@
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
             <androidx.cardview.widget.CardView
-                android:layout_width="230dp"
-                android:layout_height="260dp"
-                android:layout_marginTop="150dp"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="180dp"
                 android:layout_centerHorizontal="true"
-                app:cardCornerRadius="15dp">
+                app:cardCornerRadius="15dp"
+                android:id="@+id/card_place">
+
                 <ImageView
                     android:id="@+id/img_place"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/place_example"/>
+                    android:background="@drawable/place_example" />
             </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/place_name"
