--- a/app/src/main/res/layout/fragment_donate_1.xml
+++ b/app/src/main/res/layout/fragment_donate_1.xml
@@ -38,8 +38,7 @@
                 android:layout_width="220dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="100dp"
-                android:layout_centerHorizontal="true"
-                android:backgroundTint="@color/white"
+                android:layout_centerHorizontal="true" android:backgroundTint="@color/white"
                 app:cardCornerRadius="30dp"
                 app:cardElevation="10dp">
             <Button
@@ -47,8 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:backgroundTint="@color/white"
-                android:background="@drawable/background_rounding"
+                android:background="@drawable/color_change_2"
                 android:text="추천기부 설정"
                 android:textStyle="bold"
                 android:textColor="@color/black"
