--- a/app/src/main/res/layout/fragment_pay_1.xml
+++ b/app/src/main/res/layout/fragment_pay_1.xml
@@ -62,7 +62,7 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="270dp"
                 android:layout_centerHorizontal="true"
-                android:backgroundTint="@color/white"
+
                 app:cardCornerRadius="10dp"
                 app:cardElevation="10dp">
                 <Button
@@ -70,8 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:backgroundTint="@color/white"
-                    android:background="@drawable/background_rounding"
+                    android:background="@drawable/color_change_2"
                     android:text="결제하기"
                     android:textAlignment="center"
                     android:textStyle="bold"
@@ -133,7 +132,7 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="540dp"
                 android:layout_centerHorizontal="true"
-                android:backgroundTint="@color/white"
+
                 app:cardCornerRadius="10dp"
                 app:cardElevation="10dp">
                 <Button
@@ -141,8 +140,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:backgroundTint="@color/white"
-                    android:background="@drawable/background_rounding"
+                    android:background="@drawable/color_change_2"
                     android:text="보내기"
                     android:textAlignment="center"
                     android:textStyle="bold"
