--- a/app/src/main/res/layout/fragment_mypage_1.xml
+++ b/app/src/main/res/layout/fragment_mypage_1.xml
@@ -30,7 +30,8 @@
                     android:textAlignment="center"
                     android:textSize="30dp"
                     android:textStyle="bold"/>
-                <ImageView
+                <Button
+                    android:id="@+id/donate"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginTop="50dp"
