--- a/app/src/main/res/layout/fragment_mypage_2.xml
+++ b/app/src/main/res/layout/fragment_mypage_2.xml
@@ -3,12 +3,172 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FragmentMypage_2">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="-30dp"
+                android:backgroundTint="@color/mint1"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp">
+
+                <TextView
+                    android:id="@+id/donate_title"
+                    android:layout_width="140dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="45dp"
+                    android:text="설정"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"
+                    android:textSize="30dp"
+                    android:textStyle="bold"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="140dp"
+                android:background="@drawable/category_navi"/>
+            <ImageView
+                android:layout_width="320dp"
+                android:layout_height="30dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="230dp"
+                android:background="@drawable/donate"/>
+            <TextView
+                android:layout_width="230dp"
+                android:layout_height="30dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="100dp"
+                android:gravity="center"
+                android:text="결제 금액을 설정해주세요"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20dp"/>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="260dp"
+                android:gravity="center"
+                android:text="1,000원"
+                android:textAlignment="center"
+                android:textColor="@color/gray3"
+                android:textSize="15dp"/>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="320dp"
+                android:layout_marginTop="260dp"
+                android:gravity="center"
+                android:text="10,000원"
+                android:textAlignment="center"
+                android:textColor="@color/gray3"
+                android:textSize="15dp"/>
+            <EditText
+                android:layout_width="110dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="300dp"
+                android:layout_marginLeft="70dp"
+                android:textColor="@color/red"
+                android:background="@drawable/edit_mint"/>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="300dp"
+                android:gravity="center"
+                android:text="~"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"/>
+            <EditText
+                android:layout_width="110dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="300dp"
+                android:layout_marginLeft="230dp"
+                android:textColor="@color/red"
+                android:background="@drawable/edit_mint"/>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="320dp"
+                android:layout_marginTop="305dp"
+                android:gravity="center"
+                android:text="원"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="15dp"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="370dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/gray2"/>
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="440dp"
+                android:background="@drawable/category_navi"/>
+            <TextView
+                android:layout_width="270dp"
+                android:layout_height="30dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="400dp"
+                android:gravity="center"
+                android:text="기부 퍼센트(%)를 설정해주세요"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20dp"/>
+            <EditText
+                android:layout_width="110dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="530dp"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/red"
+                android:background="@drawable/edit_mint"/>
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="240dp"
+                android:layout_marginTop="535dp"
+                android:gravity="center"
+                android:text="%"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="590dp"
+                android:layout_centerHorizontal="true" android:backgroundTint="@color/white"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp">
+                <Button
+                    android:id="@+id/btn_complete"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:background="@color/white"
+                    android:text="완료"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"/>
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
 
 </FrameLayout>
